# Shuffle_SSLE

./: README.md
python_code/: fiat_shamir.py  gprod.py  group_ops.py  inner_product.py  libff.dylib  multiexp.py  prove.py  sameexp.py  setup.py  test.py  utils.py
rust_code/: Cargo.toml
rust_code/src/: main.rs  shuffle.rs
