[package]
name = "shuffle"
version = "0.1.0"
authors = ["mmaller <mary.maller.15@ucl.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { git = "https://github.com/scipr-lab/zexe", package = "algebra", features = [ "bls12_381" ] }
algebra-core = { git = "https://github.com/scipr-lab/zexe", package = "algebra-core", features = [ "parallel" ] }
ff-fft = {git = "https://github.com/scipr-lab/zexe", package = "ff-fft"}
sha2 = "0.9.1"
rand = "0.7.3"
